// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`explain with a mocked LLM > returns a valid adult explanation from the first reply 1`] = `
{
  "audience": "adult",
  "confidence": "high",
  "level": "explanation",
  "nodeId": "e_east",
  "osgId": "10000000-0000-4000-8000-000000000001",
  "schemaVersion": "exp/1",
  "sections": {
    "howItWorks": "Earth rotates west to east, so the eastern horizon turns towards the Sun first each morning.",
    "whatItIs": "East is the cardinal direction 90° clockwise from north.",
    "whyItMattersHere": "The sentence places sunrise in the east; the compass marks that bearing relative to the horizon.",
  },
  "summary": "East is the compass direction where sunrise is seen, roughly due east at the equinoxes.",
}
`;

exports[`explain with a mocked LLM > returns a valid child explanation from the first reply 1`] = `
{
  "audience": "child",
  "confidence": "high",
  "level": "explanation",
  "nodeId": "e_rises",
  "osgId": "10000000-0000-4000-8000-000000000001",
  "schemaVersion": "exp/1",
  "sections": {
    "commonMisconception": "The Sun does not really climb up. Earth spins, so it looks that way.",
    "whatItIs": "Rising is when the Sun first peeks over the land in the morning.",
    "whyItMattersHere": "Your sentence says the sun rises in the east. The arrow shows where.",
  },
  "summary": "The Sun looks like it rises in the east because Earth is spinning.",
}
`;

exports[`explain with a mocked LLM > returns a valid teen explanation from the first reply 1`] = `
{
  "audience": "teen",
  "confidence": "high",
  "level": "explanation",
  "nodeId": "e_tomato",
  "osgId": "20000000-0000-4000-8000-000000000002",
  "schemaVersion": "exp/1",
  "sections": {
    "commonMisconception": "Botanically a tomato is a fruit, because it develops from the flower.",
    "whatItIs": "A tomato is the fleshy fruit of the tomato plant, mostly water inside a thin skin.",
    "whyItMattersHere": "Your sentence says a sandwich can contain tomato, so it is an optional layer.",
  },
  "suggestedDrillDown": [
    "skin",
    "flesh",
    "seeds",
  ],
  "summary": "Tomato is a juicy slice that can be one of the fillings in the sandwich.",
}
`;

exports[`low-confidence offline fallback > builds a valid low-confidence adult explanation from the SG without an LLM 1`] = `
{
  "audience": "adult",
  "confidence": "low",
  "level": "explanation",
  "nodeId": "e_tomato",
  "osgId": "20000000-0000-4000-8000-000000000002",
  "schemaVersion": "exp/1",
  "sections": {
    "commonMisconception": "Botanically a tomato is a fruit (it develops from the flower and holds seeds), though cooks treat it as a vegetable.",
    "whatItIs": "Tomato adds a juicy vegetable layer to the sandwich.",
    "whyItMattersHere": "In your sentence, "A sandwich can contain bread, tomato, ham.", the tomato is an optional part of the sandwich: "can" means it may be there, not that it must.",
  },
  "suggestedDrillDown": [
    "skin",
    "flesh",
    "seeds",
  ],
  "summary": "Tomato adds a juicy vegetable layer to the sandwich.",
}
`;

exports[`low-confidence offline fallback > builds a valid low-confidence child explanation from the SG without an LLM 1`] = `
{
  "audience": "child",
  "confidence": "low",
  "level": "explanation",
  "nodeId": "e_tomato",
  "osgId": "20000000-0000-4000-8000-000000000002",
  "schemaVersion": "exp/1",
  "sections": {
    "commonMisconception": "Cooks call a tomato a vegetable, but it is a fruit: it grows from a flower and holds seeds.",
    "whatItIs": "Tomato adds a juicy vegetable layer to the sandwich.",
    "whyItMattersHere": "In your sentence, "A sandwich can contain bread, tomato, ham.", the tomato is one thing a sandwich can have. "Can" means it is a choice, not a must.",
  },
  "suggestedDrillDown": [
    "skin",
    "flesh",
    "seeds",
  ],
  "summary": "Tomato adds a juicy vegetable layer to the sandwich.",
}
`;

exports[`low-confidence offline fallback > builds a valid low-confidence teen explanation from the SG without an LLM 1`] = `
{
  "audience": "teen",
  "confidence": "low",
  "level": "explanation",
  "nodeId": "e_tomato",
  "osgId": "20000000-0000-4000-8000-000000000002",
  "schemaVersion": "exp/1",
  "sections": {
    "commonMisconception": "Botanically a tomato is a fruit (it develops from the flower and holds seeds), though cooks treat it as a vegetable.",
    "whatItIs": "Tomato adds a juicy vegetable layer to the sandwich.",
    "whyItMattersHere": "In your sentence, "A sandwich can contain bread, tomato, ham.", the tomato is an optional part of the sandwich: "can" means it may be there, not that it must.",
  },
  "suggestedDrillDown": [
    "skin",
    "flesh",
    "seeds",
  ],
  "summary": "Tomato adds a juicy vegetable layer to the sandwich.",
}
`;
